compiler/eight-tests/tests/snapshots/type_inference/compiler_tests__type_inference@chaining_infers_unit.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for type_inference
info:
  program: eightc
  args:
    - "--emit-hir"
    - tests/type-inference/chaining_infers_unit.test
input_file: compiler/eight-tests/tests/type-inference/chaining_infers_unit.test
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----
hir_module {
  declares {
    // module types
    
    
    // module struct types
    
    
    // module functions
    fn test() -> unit;
    
    // module traits
    
    
    // module instances
  
  }
  
  defining {
    // module functions
    fn test<>() -> unit {
      let x: i32 = (0 as i32);
      ((x as i32) = (1 as i32) as unit);
    }
    // module intrinsic functions
    
  
  }
}

----- stderr -----
