compiler/eight-tests/tests/snapshots/type_inference/compiler_tests__type_inference@constant_record_access.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for type_inference
info:
  program: eightc
  args:
    - "--emit-hir"
    - tests/type-inference/constant_record_access.test
input_file: compiler/eight-tests/tests/type-inference/constant_record_access.test
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----
hir_module {
  declares {
    // module types
    
    
    // module struct types
    type Agent = {
      name: i32,
    }
    
    // module functions
    fn test(agent: Agent) -> unit;
    
    // module traits
    
    
    // module instances
  
  }
  
  defining {
    // module functions
    fn test<>(agent: Agent) -> unit {
      let z: i32 = ((agent as Agent).name as i32);
    }
    // module intrinsic functions
    
  
  }
}

----- stderr -----
