compiler/eight-tests/tests/snapshots/type_inference/compiler_tests__type_inference@construction.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for type_inference
info:
  program: eightc
  args:
    - "--emit-hir"
    - tests/type-inference/construction.test
input_file: compiler/eight-tests/tests/type-inference/construction.test
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----
hir_module {
  declares {
    // module types
    
    
    // module struct types
    struct Vec2 {
      x: i32,
      y: i32,
    }
    
    // module functions
    fn origin() -> Vec2;
    
    // module traits
    
    
    // module instances
  
  }
  
  defining {
    // module functions
    fn origin<>() -> Vec2 {
      let v: Vec2 = (new Vec2 {
        x: (0 as i32),
        y: (0 as i32),
      } as Vec2);
      return (v as Vec2);
    }
    // module intrinsic functions
    
  
  }
}

----- stderr -----
