compiler/eight-tests/tests/snapshots/type_inference/compiler_tests__type_inference@function_calls.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for type_inference
info:
  program: eightc
  args:
    - "--emit-hir"
    - tests/type-inference/function_calls.test
input_file: compiler/eight-tests/tests/type-inference/function_calls.test
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----
hir_module {
  declares {
    // module types
    
    
    // module struct types
    
    
    // module functions
    fn bar(x: i32) -> i32;
    fn foo() -> unit;
    fn generic<T>(x: T) -> T;
    
    // module traits
    
    
    // module instances
  
  }
  
  defining {
    // module functions
    fn bar<>(x: i32) -> i32 {
      return (x as i32);
    }
    fn foo<>() -> unit {
      let k: i32 = ((bar as fn((i32))->i32)::<>((123 as i32)) as i32);
      let z: i32 = ((generic as fn((i32))->i32)::<>((k as i32)) as i32);
      let z: bool = ((generic as fn((bool))->bool)::<>((true as bool)) as bool);
    }
    fn generic<$1@0>(x: T) -> $1@0 {
      return (x as $1@0);
    }
    // module intrinsic functions
    
  
  }
}

----- stderr -----
