compiler/eight-tests/tests/snapshots/type_inference/compiler_tests__type_inference@generic_fn_ref.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for type_inference
info:
  program: eightc
  args:
    - "--emit-hir"
    - tests/type-inference/generic_fn_ref.test
input_file: compiler/eight-tests/tests/type-inference/generic_fn_ref.test
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----
hir_module {
  declares {
    // module types
    
    
    // module struct types
    
    
    // module functions
    fn id<T>(x: T) -> T;
    fn test() -> unit;
    
    // module traits
    
    
    // module instances
  
  }
  
  defining {
    // module functions
    fn test<>() -> unit {
      let z: bool = ((id as fn((bool))->bool)::<>((true as bool)) as bool);
      let k: i32 = ((id as fn((i32))->i32)::<>((123 as i32)) as i32);
    }
    // module intrinsic functions
    
  
  }
}

----- stderr -----
