compiler/eight-tests/tests/snapshots/type_inference/compiler_tests__type_inference@offset_index_yields_inner.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for type_inference
info:
  program: eightc
  args:
    - "--emit-hir"
    - tests/type-inference/offset_index_yields_inner.test
input_file: compiler/eight-tests/tests/type-inference/offset_index_yields_inner.test
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----
hir_module {
  declares {
    // module types
    
    
    // module struct types
    
    
    // module functions
    fn test(v: *i32) -> unit;
    
    // module traits
    
    
    // module instances
  
  }
  
  defining {
    // module functions
    fn test<>(v: *i32) -> unit {
      let k: i32 = ((v as *i32)[(0 as i32)] as i32);
      let q: i32 = ((v as *i32)[(k as i32)] as i32);
    }
    // module intrinsic functions
    
  
  }
}

----- stderr -----
