compiler/eight-tests/tests/snapshots/type_inference/compiler_tests__type_inference@pointer_deref.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for type_inference
info:
  program: eightc
  args:
    - "--emit-hir"
    - tests/type-inference/pointer_deref.test
input_file: compiler/eight-tests/tests/type-inference/pointer_deref.test
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----
hir_module {
  declares {
    // module types
    
    
    // module struct types
    
    
    // module functions
    fn address_of(a: i32) -> unit;
    fn deref(a: i32, b: **i32) -> unit;
    
    // module traits
    
    
    // module instances
  
  }
  
  defining {
    // module functions
    fn address_of<>(a: i32) -> unit {
      let k: *i32 = (&(1 as i32) as *i32);
    }
    fn deref<>(a: i32, b: **i32) -> unit {
      let m: i32 = (*(*(b as **i32) as *i32) as i32);
    }
    // module intrinsic functions
    
  
  }
}

----- stderr -----
