compiler/eight-tests/tests/snapshots/type_inference/compiler_tests__type_inference@uninitialized_inference.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for type_inference
info:
  program: eightc
  args:
    - "--emit-hir"
    - tests/type-inference/uninitialized_inference.test
input_file: compiler/eight-tests/tests/type-inference/uninitialized_inference.test
snapshot_kind: text
---
success: true
exit_code: 0
----- stdout -----
hir_module {
  declares {
    // module types
    
    
    // module struct types
    
    
    // module functions
    fn foo(x: i32) -> i32;
    
    // module traits
    
    
    // module instances
  
  }
  
  defining {
    // module functions
    fn foo<>(x: i32) -> i32 {
      let k: i32 = (((123 as i32)) as i32);
    }
    // module intrinsic functions
    
  
  }
}

----- stderr -----
